Add note for how to continue with flex-basis
I need to find a way to calculate flex-basis for the squares based on the user's input for the grid size. 900px / user input = flex-basis.

--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,19 @@
 }
 
 #container {
-    height: 640px;
-    width: 700px;
+    height: 900px;
+    width: 900px;
     border: 0px solid black;
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 1;
+    justify-content: left;
 }
 
 .square {
     border: 1px solid black;
     display: flex;
-    flex-basis: 40px;
+    /* Flex-basis is set to 56.25px currently to accommodate the 16x16 grid (900px width / 16 = 56.25px per square). I might be able to override the flex-basis depending on user input for grid size */
+    flex-basis: 56.25px;
     flex-grow: 1;
+    box-sizing: border-box;
 }
