Re-add grid reset button styles for future review

--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@ h3 {
     align-items: center;
 }
 
-#gridSelect {
-/* #resetButton { */
+#gridSelect,
+#resetButton {
     font-size: 14px;
     font-weight: bold;
     color: purple;
